--- a/index.html
+++ b/index.html
@@ -4,8 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Service</title>
+    <!-- tailwind -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- daisyui -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <!-- google font  -->
+     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap');
+        .hind-madurai-light {
+        font-family: "Hind Madurai", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        }
+    </style>
 </head>
-<body>
-    
+<body class="hind-madurai-light">
+
+    <!-- header section -->
+    <header  class="">
+        <!-- navbar -->
+         <div class="flex justify-between items-center max-w-[1140px] mx-auto">
+            <div class="flex items-center gap-2">
+                <img class="h-[50px]" src="./assets/logo.png" alt="">
+                <h1 class="text-[#006747] font-extrabold text-[20px]">Emergency <br>Service</h1>
+            </div>
+                
+            <div class="flex items-center gap-3">
+                <div class="flex">
+                    <h1>0</h1>
+                    <img class="h-7" src="./assets/heart.png" alt="">
+                </div>
+                <div class="flex">
+                    <h1>100</h1>
+                    <img class="h-7" src="./assets/coin.png" alt="">
+                </div>
+                <button class="btn bg-[#00a63e!important] text-[#ffffff!important] rounded-[20px!important]">Success</button>
+            </div>
+         </div>
+         <!-- banner section -->
+         <div class="w-screen bg-gradient-to-r from-green-900 via-green-800 to-green-900 flex flex-col justify-center items-center">
+            <img class="h-[92px]" src="./assets/logo-dark.png" alt="">
+            <h1 class="font-bold text-4xl text-white">Emergency Service Directory</h1>
+            <p class="text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+         </div>
+    </header>
 </body>
 </html>
