--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img class="h-7" src="./assets/coin.png" alt="">
                 </div>
                 <button
-                    class="btn bg-[#00a63e!important] text-[#ffffff!important] rounded-[20px!important]"><span>0</span>
+                    class="btn bg-[#00a63e!important] text-[#ffffff!important] rounded-[20px!important]"><span id="copy-count">0</span>
                     Copy</button>
             </div>
         </div>
@@ -80,10 +80,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -102,10 +102,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -124,10 +124,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -146,10 +146,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -168,10 +168,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -190,10 +190,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -207,15 +207,15 @@
                             <h2 class="service-name text-lg font-bold">Electricity Helpline</h2>
                             <p class="text-gray-500">Electricity Outage</p>
                             <h2 class="service-number text-3xl font-semibold">16216</h2>
-                            <h2 class="text-lg p-1 text-gray-500 bg-[#f2f2f2] w-[60px] text-center rounded-2xl ">
+                            <h2 class="text-lg p-1 text-gray-500 bg-[#f2f2f2] w-[90px] text-center rounded-2xl ">
                                 Electricity</h2>
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -234,10 +234,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -256,10 +256,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -267,21 +267,19 @@
                 </div>
                 <!-- call history  -->
                 <div class="py-7 ">
-                    <div class="  pr-8 lg:pr-2 ml-4 p-3 w-full rounded-lg h-full bg-[#FFFFFF]">
+                    <div class=" pr-8 lg:pr-2 ml-4 p-3 w-[250px] rounded-lg h-full bg-[#FFFFFF]">
                         <div class="flex justify-between items-center">
                             <h2><i class="fa-solid fa-clock"></i> Call History</h2>
                             <button id="clear-history"
                                 class="btn w-[80px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                     class="fa-solid fa-phone"></i>Clear</button>
                         </div>
-                        <ul id="call-history" class="mt-3 space-y-2 text-sm text-gray-700"></ul>
+                        <ul id="call-history" class=" mt-3 text-gray-700"></ul>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
 
     <script src="./script.js"></script>
 </body>
