--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     <h1 id="coin">100</h1>
                     <img class="h-7" src="./assets/coin.png" alt="">
                 </div>
-                <button
-                    class="btn bg-[#00a63e!important] text-[#ffffff!important] rounded-[20px!important]"><span id="copy-count">0</span>
+                <button class="btn bg-[#00a63e!important] text-[#ffffff!important] rounded-[20px!important]"><span
+                        id="copy-count">0</span>
                     Copy</button>
             </div>
         </div>
@@ -80,10 +80,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -102,10 +102,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -124,10 +124,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -146,10 +146,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -168,10 +168,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -190,10 +190,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -212,10 +212,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -234,10 +234,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -256,10 +256,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[110px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[110px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -283,5 +283,4 @@
 
     <script src="./script.js"></script>
 </body>
-
 </html>
