fixed the call history section for the mobile responsive part

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -102,10 +102,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -124,10 +124,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -146,10 +146,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -168,10 +168,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -190,10 +190,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -212,10 +212,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -234,10 +234,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -256,10 +256,10 @@
                             <div class=" flex gap-2 justify-center ">
 
                                 <button
-                                    class="btn copy-btn w-[175px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
+                                    class="btn copy-btn w-[150px] lg:w-[100px] bg-[#FFFFFF!important] text-[#5C5C5C!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-copy"></i>Copy</button>
                                 <button
-                                    class="btn call-button w-[175px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
+                                    class="btn call-button w-[150px] lg:w-[100px] bg-[#00a63e!important] text-[#ffffff!important] rounded-[10px!important]"><i
                                         class="fa-solid fa-phone"></i>Call</button>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                 </div>
                 <!-- call history  -->
                 <div class="py-7 ">
-                    <div class=" pr-8 lg:pr-2 ml-4 p-3 w-[250px] rounded-lg h-full bg-[#FFFFFF]">
+                    <div class=" pr-8 lg:pr-2 ml-4 p-3 w-full lg:w-[250px] rounded-lg h-full bg-[#FFFFFF]">
                         <div class="flex justify-between items-center">
                             <h2><i class="fa-solid fa-clock"></i> Call History</h2>
                             <button id="clear-history"
